add control 'whether the host tools install and which rpm tools be used' to .librc file

--- a/.ltibrc
+++ b/.ltibrc
@@ -112,3 +112,11 @@ $home/.ccache
 # package and you want to force others to install this update
 %host_wait_warning
 .host_wait_warning35
+
+# control whether host tools will install
+%bdir_local
+1
+
+# control which rpm tools will be used
+%use_host_tools
+1
